// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main Card should render correctly in loading state 1`] = `
<View
  style={
    {
      "alignSelf": "center",
      "backgroundColor": "#1E1E1E",
      "borderRadius": 16,
      "elevation": 8,
      "height": 220,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 6,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 8,
      "width": 718,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#F5F5F5",
        "borderRadius": 16,
        "flex": 1,
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#E0E0E0",
            "overflow": "hidden",
          },
          {
            "borderRadius": 10,
            "height": 20,
            "width": 80,
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": -300,
              },
            ],
          }
        }
      >
        <LinearGradient
          colors={
            [
              "#E0E0E0",
              "#F5F5F5",
              "#E0E0E0",
            ]
          }
          end={
            {
              "x": 1,
              "y": 0.5,
            }
          }
          start={
            {
              "x": 0,
              "y": 0.5,
            }
          }
          style={
            {
              "flex": 1,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "marginTop": "auto",
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#E0E0E0",
              "overflow": "hidden",
            },
            {
              "borderRadius": 4,
              "height": 18,
              "marginBottom": 6,
              "width": "100%",
            },
          ]
        }
      >
        <View
          collapsable={false}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": [
                {
                  "translateX": -300,
                },
              ],
            }
          }
        >
          <LinearGradient
            colors={
              [
                "#E0E0E0",
                "#F5F5F5",
                "#E0E0E0",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0.5,
              }
            }
            start={
              {
                "x": 0,
                "y": 0.5,
              }
            }
            style={
              {
                "flex": 1,
                "width": "100%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#E0E0E0",
              "overflow": "hidden",
            },
            {
              "borderRadius": 4,
              "height": 18,
              "marginBottom": 10,
              "width": "60%",
            },
          ]
        }
      >
        <View
          collapsable={false}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": [
                {
                  "translateX": -300,
                },
              ],
            }
          }
        >
          <LinearGradient
            colors={
              [
                "#E0E0E0",
                "#F5F5F5",
                "#E0E0E0",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0.5,
              }
            }
            start={
              {
                "x": 0,
                "y": 0.5,
              }
            }
            style={
              {
                "flex": 1,
                "width": "100%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#E0E0E0",
              "overflow": "hidden",
            },
            {
              "borderRadius": 4,
              "height": 12,
              "marginBottom": 16,
              "width": "85%",
            },
          ]
        }
      >
        <View
          collapsable={false}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": [
                {
                  "translateX": -300,
                },
              ],
            }
          }
        >
          <LinearGradient
            colors={
              [
                "#E0E0E0",
                "#F5F5F5",
                "#E0E0E0",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0.5,
              }
            }
            start={
              {
                "x": 0,
                "y": 0.5,
              }
            }
            style={
              {
                "flex": 1,
                "width": "100%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#E0E0E0",
              "overflow": "hidden",
            },
            {
              "borderRadius": 16,
              "height": 32,
              "width": 110,
            },
          ]
        }
      >
        <View
          collapsable={false}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": [
                {
                  "translateX": -300,
                },
              ],
            }
          }
        >
          <LinearGradient
            colors={
              [
                "#E0E0E0",
                "#F5F5F5",
                "#E0E0E0",
              ]
            }
            end={
              {
                "x": 1,
                "y": 0.5,
              }
            }
            start={
              {
                "x": 0,
                "y": 0.5,
              }
            }
            style={
              {
                "flex": 1,
                "width": "100%",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Main Card should render correctly with default/full props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "center",
      "backgroundColor": "#1E1E1E",
      "borderRadius": 16,
      "elevation": 8,
      "height": 220,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 6,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 8,
      "width": 718,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      {
        "height": "100%",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://example.com/image.jpg",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "height": "100%",
            "width": "100%",
          },
          {
            "borderRadius": 16,
          },
        ]
      }
    />
    <LinearGradient
      colors={
        [
          "transparent",
          "rgba(0,0,0,0.4)",
          "rgba(0,0,0,0.85)",
        ]
      }
      style={
        {
          "borderRadius": 16,
          "flex": 1,
          "justifyContent": "space-between",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(255, 255, 255, 0.25)",
            "borderColor": "rgba(255, 255, 255, 0.4)",
            "borderRadius": 20,
            "borderWidth": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 10,
              "fontWeight": "700",
              "letterSpacing": 1,
            }
          }
        >
          Promo Spesial
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": "auto",
            "paddingVertical": 20,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 20,
              "fontWeight": "800",
              "lineHeight": 26,
            }
          }
        >
          Kartu Utama
        </Text>
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#E0E0E0",
              "fontSize": 11,
              "fontWeight": "400",
              "lineHeight": 18,
              "marginBottom": 10,
            }
          }
        >
          Deskripsi singkat kartu
        </Text>
        <View
          style={
            {
              "alignSelf": "flex-start",
              "backgroundColor": "#0066FF",
              "borderRadius": 24,
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 12,
                "fontWeight": "700",
              }
            }
          >
            Lihat Detail
          </Text>
        </View>
      </View>
    </LinearGradient>
  </View>
</View>
`;

exports[`Main Card should render correctly with minimal props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "center",
      "backgroundColor": "#1E1E1E",
      "borderRadius": 16,
      "elevation": 8,
      "height": 220,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 6,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 8,
      "width": 718,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      {
        "height": "100%",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?auto=format&fit=crop&w=1000&q=80",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "height": "100%",
            "width": "100%",
          },
          {
            "borderRadius": 16,
          },
        ]
      }
    />
    <LinearGradient
      colors={
        [
          "transparent",
          "rgba(0,0,0,0.4)",
          "rgba(0,0,0,0.85)",
        ]
      }
      style={
        {
          "borderRadius": 16,
          "flex": 1,
          "justifyContent": "space-between",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(255, 255, 255, 0.25)",
            "borderColor": "rgba(255, 255, 255, 0.4)",
            "borderRadius": 20,
            "borderWidth": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 10,
              "fontWeight": "700",
              "letterSpacing": 1,
            }
          }
        >
          PROMOTED
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": "auto",
            "paddingVertical": 20,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 20,
              "fontWeight": "800",
              "lineHeight": 26,
            }
          }
        >
          Minimal Card Title
        </Text>
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#E0E0E0",
              "fontSize": 11,
              "fontWeight": "400",
              "lineHeight": 18,
              "marginBottom": 10,
            }
          }
        >
          Discover seamless digital banking experience powered by modern modular architecture.
        </Text>
        <View
          style={
            {
              "alignSelf": "flex-start",
              "backgroundColor": "#0066FF",
              "borderRadius": 24,
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 12,
                "fontWeight": "700",
              }
            }
          >
            Explore Now
          </Text>
        </View>
      </View>
    </LinearGradient>
  </View>
</View>
`;

exports[`Main Card should render correctly without image URL 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "center",
      "backgroundColor": "#1E1E1E",
      "borderRadius": 16,
      "elevation": 8,
      "height": 220,
      "opacity": 1,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 6,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 8,
      "width": 718,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      {
        "height": "100%",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?auto=format&fit=crop&w=1000&q=80",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "height": "100%",
            "width": "100%",
          },
          {
            "borderRadius": 16,
          },
        ]
      }
    />
    <LinearGradient
      colors={
        [
          "transparent",
          "rgba(0,0,0,0.4)",
          "rgba(0,0,0,0.85)",
        ]
      }
      style={
        {
          "borderRadius": 16,
          "flex": 1,
          "justifyContent": "space-between",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(255, 255, 255, 0.25)",
            "borderColor": "rgba(255, 255, 255, 0.4)",
            "borderRadius": 20,
            "borderWidth": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 10,
              "fontWeight": "700",
              "letterSpacing": 1,
            }
          }
        >
          Promo Spesial
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": "auto",
            "paddingVertical": 20,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 20,
              "fontWeight": "800",
              "lineHeight": 26,
            }
          }
        >
          Kartu Utama
        </Text>
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#E0E0E0",
              "fontSize": 11,
              "fontWeight": "400",
              "lineHeight": 18,
              "marginBottom": 10,
            }
          }
        >
          Deskripsi singkat kartu
        </Text>
        <View
          style={
            {
              "alignSelf": "flex-start",
              "backgroundColor": "#0066FF",
              "borderRadius": 24,
              "marginBottom": 10,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 12,
                "fontWeight": "700",
              }
            }
          >
            Lihat Detail
          </Text>
        </View>
      </View>
    </LinearGradient>
  </View>
</View>
`;
